调整API结构，完善对包私有方法的委托