@@ -5,7 +5,10 @@ plugins {
 apply plugin: 'maven-publish'
 
 group 'com.github.EB-wilson'
-version '1.5-B1'
+version '1.6-A1'
+
+sourceCompatibility = 17
+targetCompatibility = 17
 
 repositories {
   mavenCentral()
@@ -38,19 +41,18 @@ allprojects{
   tasks.withType(JavaCompile){
     options.encoding = "UTF-8"
 
-    sourceCompatibility = 17
-    targetCompatibility = 9
-
     options.fork = true
     options.forkOptions.jvmArgs.addAll([
-            "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-            "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-            "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-            "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-            "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-            "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
     ])
 
-    options.compilerArgs.addAll(['--release', '9'])
+    options.compilerArgs.addAll([
+        "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"
+    ])
   }
 }
